--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
+    <meta http-equiv="Content-Security-Policy" content="script-src https://*.googleapis.com https://*.google.com http://localhost http://jsconsole.com http://api.openweathermap.org 'unsafe-inline' 'unsafe-eval' 'self'">
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link rel="stylesheet" href="jqm\jquery.mobile-1.3.2.min.css">
     <script src="jqm\jquery-2.0.3.min.js"></script>
