--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
     <script src="jqm\jquery-2.0.3.min.js"></script>
     <script src="jqm\jquery.mobile-1.3.2.min.js"></script>
    
-    <title>Hello World</title>
+    <title>Startbutton</title>
 </head>
 <body>
 
@@ -39,7 +39,7 @@
         </div>
 
         <div data-role="footer">
-            <h1>Footer Text</h1>
+            <h1>Copyright Startbutton @ 2015</h1>
         </div>
 
     </div>
